Fixeed Alignment, Sizing and Tab opening
Fixes #11
Fixes #9
Fixes #8

--- a/PersonalWebsite/src/PersonalWebsite/wwwroot/css/IndexDesign.css
+++ b/PersonalWebsite/src/PersonalWebsite/wwwroot/css/IndexDesign.css
@@ -52,23 +52,14 @@
 
 #mainmenu{
     background-color: #A2D4AB;
-}
-
-#menuitems{
     text-align:center;
-    list-style:none;
-    float: none;
-    display: table;
-    margin: 0 auto;
-    padding: 20px;
-    
 }
 
-#menuitems li{
+div.menuitems div.row {
     padding: 5px;
 }
 
-#menuitems li a{
+div.menuitems a{
     transition: all 0.5s ease;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -79,7 +70,7 @@
     text-decoration: none;
 }
 
-#menuitems li a:hover{
+div.menuitems a:hover{
     transition: all 0.5s ease;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -87,14 +78,10 @@
     color: gray;
 }
 
-.copiedTextArea {
-    height: 100%;
-}
-
 #copiedText{
     text-align:center;
     position: absolute;
-    left: -20%;
+    left: -15%;
     padding: 20px;
     font-size: 15px;
     font-family: 'Facile Sans';
