--- a/PersonalWebsite/src/PersonalWebsite/wwwroot/css/Modal.css
+++ b/PersonalWebsite/src/PersonalWebsite/wwwroot/css/Modal.css
@@ -20,7 +20,8 @@
 }
 
 .modalDialog > div {
-	width: 400px;
+	width: 50%;
+    height: 50%;
 	position: relative;
 	margin: 10% auto;
 	padding: 5px 20px 13px 20px;
@@ -29,6 +30,8 @@
 	background: -moz-linear-gradient(#fff, #999);
 	background: -webkit-linear-gradient(#fff, #999);
 	background: -o-linear-gradient(#fff, #999);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .close {
@@ -36,9 +39,9 @@
 	color: #FFFFFF;
 	line-height: 25px;
 	position: absolute;
-	right: -12px;
+	right: 0;
 	text-align: center;
-	top: -10px;
+    z-index: 10000;
 	width: 24px;
 	text-decoration: none;
 	font-weight: bold;
